# interstate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml
examples/01_Ala2/: 01_gather_data.py  02_training.py  03_inference.py  04_dihedrals.py  05_plotting.py  README.md  run.sh
examples/01_Ala2/data/: pnas.txt
examples/02_FeCrNi/: 01_download.py  README.md
examples/02_FeCrNi/01_unbiased_md/: README.md
examples/02_FeCrNi/01_unbiased_md/01_directional_growth/01_equilibration/: in.lmp
examples/02_FeCrNi/01_unbiased_md/01_directional_growth/02_growth/: in.lmp
examples/02_FeCrNi/01_unbiased_md/01_directional_growth/03_relaxation/: in.lmp
examples/02_FeCrNi/01_unbiased_md/02_seed_growth/01_equilibration/: in.lmp
examples/02_FeCrNi/01_unbiased_md/02_seed_growth/02_growth/: in.lmp  run.sh
examples/02_FeCrNi/01_unbiased_md/03_nucleation/01_equilibration/: in.lmp
examples/02_FeCrNi/01_unbiased_md/04_start_and_end_states/: 01_state_A_md.sh  02_state_B_md.sh  in_stateA_equilibration.lmp  in_stateA_md.lmp  in_stateB.lmp
examples/02_FeCrNi/02_committor/: run.sh
examples/02_FeCrNi/02_committor/01_training/: 01_training.py  run.sh
examples/02_FeCrNi/02_committor/02_inference/: 01_committor.py  02_fraction_of_solids.py  03_plotting.py  run.sh
interstate/: cluster.py  cvs.py  dataset.py  inference.py  loss.py  message_passing.py  models.py  points_convolution.py  radial_basis.py  scatter.py  utils.py
