[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "interstate"
version = "0.0.1"
description = "Hassle free determination of committor functions using E(3)-equivariant graph neural networks."
authors=[
    {name="Killian Sheriff", email="ksheriff@mit.edu"},
]
readme="README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  
]

[project.urls]
repository="https://github.com/TRI-AMDD/interstate"


[tool.setuptools]
py-modules = ["interstate"]

[tool.setuptools.packages.find]
exclude = [
  "misc*",
  "docs*",
  "examples*",
]

[tool.pydocstyle]
select = ["D415", "D403"]

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = ["E741", "E203", "W503", "E731", "E721"]
max-line-length = 127
max-complexity = 64

[tool.pytest.ini_options]
testpaths = ["tests"]